<resources>
    <string name="app_name">cocktail_bar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">My fragment</string>
    <string name="tv_title">Title</string>
    <string name="add_title">Add title</string>
    <string name="description">Description</string>
    <string name="optional_field">Optional field</string>
    <string name="recipe">Recipe</string>
    <string name="cocktail_name">Cocktail name</string>
    <string name="edit_description">To make this homemade</string>
    <string name="edit_text_recipe">Simply combine all the ingredients</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>