<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateCocktailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="Photo"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_title" />

        <EditText
            android:id="@+id/edit_text_title"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/cocktail_name" />

        <TextView
            android:id="@+id/tv_add_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_title" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/description" />

        <EditText
            android:id="@+id/edit_text_description"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/edit_description" />

        <TextView
            android:id="@+id/tv_add_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/optional_field" />

        <TextView
            android:id="@+id/tv_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/recipe" />

        <EditText
            android:id="@+id/edit_text_recipe"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/edit_text_recipe"
            android:autofillHints="" />

        <TextView
            android:id="@+id/tv_add_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/optional_field" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/save"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/cancel"/>


    </LinearLayout>
</ScrollView>